Fix alignment key value
fixes #203

--- a/content/scss/_c-key-value.scss
+++ b/content/scss/_c-key-value.scss
@@ -21,7 +21,7 @@
   }
 
   .c-key-value-item__key {
-    width: 45%;
+    flex: 0 0 45%;
     margin-bottom: 0;
   }
 
